# imdb-movie-recomendation

./: .gitignore  CLAUDE.md  DEBUGGING.md  Dockerfile  LICENSE  README.md  config.yaml  docker-compose.yml  main.py  pyproject.toml
app/: main.py
app/api/: routes.py
app/core/: config.py
app/models/: schemas.py
app/services/: candidates.py  dismissed.py  features.py  ingest.py  model.py  omdb.py  pipeline.py  recommend.py  scored_store.py  scrape.py  similar.py  tmdb.py  watchlist.py
frontend/: CLAUDE.md  Dockerfile  README.md  eslint.config.mjs  nuxt.config.ts  package-lock.json  package.json
tests/: test_candidates.py  test_dismissed.py  test_features.py  test_ingest.py  test_person_browse.py  test_recommend.py  test_scored_store.py  test_smoke.py
tickets/: 001-improve-prediction-model-features.md  002-replace-csv-with-imdb-url.md  003-improve-frontend-ux.md  004-animation-to-anime.md  005-persist-scored-candidates.md  006-fast-initial-load.md  007-improve-language-data.md  008-sorting-and-ux-polish.md  009-find-similar-movies.md  010-frontend-modularization.md  011-browse-by-person.md  012-improve-startup-process.md  014-documentation-audit.md  015-code-quality-and-correctness.md  016-search-index-gaps.md  017-card-popup-navigation.md  018-person-browse-all-titles.md  019-seen-filter-no-effect.md  020-min-voters-default-filter.md  021-fts5-search-performance.md  022-language-detection-priority.md  PROTOCOL.md  README.md  index.yaml
tickets/001-improve-prediction-model-features/: AGENT.md  PROGRESS.md  ST-001-genre-affinity-scores.md  decisions.md  (+9 more)
(+180 files in other folders)
